# ogon

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  buildflags.h.in  config.h.in  ogon.pc.in  ogonConfig.cmake.in
backend/: .gitignore  CMakeLists.txt  dmgbuf.c  dmgbuf.cpp  keycodes.c  keycodes.cpp  ogon-backend.pc.in  ogon-backendConfig.cmake.in  protocol.c  protocol.cpp  protocol.h  service.c  service.cpp  transport.c  transport.cpp
backend-launcher/: .gitignore  CMakeLists.txt  ModuleCommunication.cpp  ModuleCommunication.h  SystemSession.cpp  SystemSession.h  main.cpp
cli/: .gitignore  CMakeLists.txt  cli.cpp
cmake/: CheckCmakeCompat.cmake  ConfigOptions.cmake  FindDBus.cmake  FindDependency.cmake  FindProtobufC.cmake  FindThrift.cmake  Findlibsystemd.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  ThriftExternalProject.cmake  ThriftUtils.cmake  ogonCompilerFlags.cmake
common/: global.h  icp.h  procutils.c  procutils.cpp  procutils.h  security.c  security.cpp  security.h
doc/: .gitignore  ICPProtocol.md  SBProtocol.md  SCOPES.md  architecture.md  backendProtocol.md  (+9 more)
include/: CMakeLists.txt
include/ogon/: api.h  backend.h  build-config.h.in  dmgbuf.h  message.h  module.h  service.h  version.h.in
misc/: .gitignore  CMakeLists.txt  config.ini.debian.in  ogon-get-openh264-codec.in  ogon-rdp-server.init.in  ogon-rdp-server.service.in  ogon-session-manager.init.in  ogon-session-manager.service.in  ogon-start-vc.sh.in  ogonXsession  ogon_cleanup.sh  startvc.sh.example
misc/firewalld/: rdp.xml
misc/pam.d/: ogon.debian  ogon.fedora  ogon.suse
rdp-server/: .gitignore  CMakeLists.txt  PMurHash.c  PMurHash.cpp  PMurHash.h  app_context.c  app_context.cpp  app_context.h  back_front_internal.h  backend.c  backend.cpp  backend.h  bandwidth_mgmt.c  bandwidth_mgmt.cpp  bandwidth_mgmt.h  channels.c  channels.cpp  channels.h  commondefs.h  encoder.c  encoder.cpp  encoder.h  eventloop.c  eventloop.cpp  eventloop.h  ffmpeg.c  font8x8.h  frontend.c  frontend.cpp  frontend.h  graphics.c  graphics.cpp  ogon.c  ogon.cpp  ogon.h  openh264.c  openh264.cpp  openh264.h  peer.c  peer.cpp  (+7 more)
rdp-server/icp/: CMakeLists.txt  icp.c  icp.cpp  icp_client_stubs.c  icp_client_stubs.cpp  icp_client_stubs.h  icp_server_stubs.c  icp_server_stubs.cpp  icp_server_stubs.h
rdp-server/icp/pbrpc/: pbrpc.c  pbrpc.cpp  pbrpc.h  pbrpc_transport.h  pbrpc_utils.c  pbrpc_utils.cpp  pbrpc_utils.h  pipe_transport.c  pipe_transport.cpp  pipe_transport.h
rdp-server/test/: .gitignore  CMakeLists.txt  TestOgonEventLoop.c  TestOgonEventLoop.cpp  TestOgonTimer.c  TestOgonTimer.cpp
session-manager/: .gitignore  CMakeLists.txt  auth.h  main.cpp
session-manager/auth/: CMakeLists.txt
session-manager/auth/pam/: CMakeLists.txt  pam_auth.c  pam_auth.cpp  pam_auth.h
session-manager/common/appcontext/: ApplicationContext.cpp  ApplicationContext.h
session-manager/common/call/: Call.cpp  Call.h  CallFactory.cpp  CallFactory.h  CallIn.cpp  CallIn.h  CallInAuthenticateUser.cpp  CallInAuthenticateUser.h  CallInDisconnectUserSession.cpp  CallInDisconnectUserSession.h  CallInEndSession.cpp  CallInEndSession.h  CallInLogonUser.cpp  CallInLogonUser.h  CallInPing.cpp  CallInPing.h  CallInPropertyBool.cpp  CallInPropertyBool.h  CallInPropertyBulk.cpp  CallInPropertyBulk.h  CallInPropertyNumber.cpp  CallInPropertyNumber.h  CallInPropertyString.cpp  CallInPropertyString.h  CallInRemoteControlEnded.cpp  CallInRemoteControlEnded.h  CallInSBPVersion.cpp  CallInSBPVersion.h  CallOut.cpp  CallOut.h  CallOutDisconnectUserSession.cpp  CallOutDisconnectUserSession.h  CallOutLogOffUserSession.cpp  CallOutLogOffUserSession.h  CallOutMessage.cpp  CallOutMessage.h  CallOutOtsApiStartRemoteControl.cpp  CallOutOtsApiStartRemoteControl.h  CallOutOtsApiStopRemoteControl.cpp  CallOutOtsApiStopRemoteControl.h  (+14 more)
session-manager/common/config/: PropertyCWrapper.cpp  PropertyCWrapper.h  PropertyLevel.h  PropertyManager.cpp  PropertyManager.h
session-manager/common/module/: AuthModule.cpp  AuthModule.h  CallBacks.cpp  CallBacks.h  LocalModule.cpp  LocalModule.h  Module.h  ModuleManager.cpp  ModuleManager.h  RemoteModule.cpp  RemoteModule.h  RemoteModuleTransport.cpp  RemoteModuleTransport.h
session-manager/common/otsapi/: OTSApiHandler.cpp  OTSApiHandler.h  OTSApiServer.cpp  OTSApiServer.h  OgonServerSSL.h  TaskDisconnect.cpp  TaskDisconnect.h  TaskLogoff.cpp  TaskLogoff.h  TaskStartRemoteControl.cpp  TaskStartRemoteControl.h  TaskStopRemoteControl.cpp  TaskStopRemoteControl.h
session-manager/common/pbRPC/: RpcEngine.cpp  RpcEngine.h
session-manager/common/permission/: LogonPermission.cpp  LogonPermission.h  PermissionManager.cpp  PermissionManager.h  permission.h
session-manager/common/process/: ProcessMonitor.cpp  ProcessMonitor.h
session-manager/common/session/: Connection.cpp  Connection.h  ConnectionStore.cpp  ConnectionStore.h  Session.cpp  Session.h  SessionAccessor.h  SessionNotifier.cpp  SessionNotifier.h  SessionStore.cpp  SessionStore.h  TaskCallIn.cpp  TaskCallIn.h  TaskDisconnect.cpp  TaskDisconnect.h  TaskEnd.cpp  TaskEnd.h  TaskLogonUser.cpp  TaskLogonUser.h  TaskSessionTimeout.cpp  TaskSessionTimeout.h  TaskShutdown.cpp  TaskShutdown.h  TaskSwitchTo.cpp  TaskSwitchTo.h
session-manager/common/task/: Executor.cpp  Executor.h  InformableTask.h  Task.h  ThreadTask.h
session-manager/common/utils/: CSGuard.h  FactoryBase.h  MakeCert.cpp  MakeCert.h  SignalingQueue.h  SingletonBase.h  StringHelpers.cpp  StringHelpers.h  TimeHelpers.cpp  TimeHelpers.h
session-manager/config/: ReadMe.txt  ogon.SessionManager.conf
session-manager/module/: CMakeLists.txt
session-manager/module/Qt/: CMakeLists.txt  qt_module.cpp  qt_module.h
session-manager/module/Weston/: CMakeLists.txt  weston_module.cpp  weston_module.h
session-manager/module/X11/: CMakeLists.txt  x11_module.cpp  x11_module.h
session-manager/module/common/: module_helper.cpp  module_helper.h
session-manager/otsapi/: CMakeLists.txt  ogon_ssl.h  otsapi_thrift.cpp
snmon/: .gitignore  CMakeLists.txt  snmon.cpp
(+32 files in other folders)
